--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_core: ^1.20.0
   firebase_auth: ^3.6.2
   cloud_firestore: ^3.4.3
+  firebase_messaging: ^12.0.1
 
 dev_dependencies:
   flutter_test:
