--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,12 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.5
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.20.0
   firebase_auth: ^3.6.2
   cloud_firestore: ^3.4.3
   firebase_messaging: ^12.0.1
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
