--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.2.0+1
+version: 1.3.0+1
 
 environment:
   sdk: '>=2.17.6 <3.0.0'
@@ -33,9 +33,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.20.0
   firebase_auth: ^3.6.2
-  cloud_firestore: ^3.4.3
+  cloud_firestore: ^3.4.4
+  firebase_storage: ^10.0.0
   firebase_messaging: ^12.0.1
   url_launcher: ^6.1.5
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
