--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: our_community
-description: A new Flutter project.
+description: An app to bring communities together.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.17.0
 
 dev_dependencies:
+  test: ^1.21.1
   flutter_test:
     sdk: flutter
 
