--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^6.1.5
   image_picker: ^0.8.5+3
   intl: ^0.17.0
+  provider: ^6.0.3
 
 dev_dependencies:
   test: ^1.21.1
