--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^0.8.5+3
   intl: ^0.17.0
   provider: ^6.0.3
+  flutter_linkify: ^5.0.2
 
 dev_dependencies:
   test: ^1.21.1
