--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.17.0
   provider: ^6.0.3
   flutter_linkify: ^5.0.2
+  timeago: ^3.3.0
 
 dev_dependencies:
   test: ^1.21.1
