--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,14 @@ dependencies:
   firebase_auth: ^3.6.2
   cloud_firestore: ^3.4.4
   firebase_storage: ^10.0.0
-  firebase_messaging: ^12.0.1
+  firebase_messaging: ^13.0.0
   url_launcher: ^6.1.5
   image_picker: ^0.8.5+3
   intl: ^0.17.0
   provider: ^6.0.3
   flutter_linkify: ^5.0.2
   timeago: ^3.3.0
+  fake_cloud_firestore: ^1.3.1
 
 dev_dependencies:
   test: ^1.21.1
