--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -12,9 +12,8 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  pre-commit:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v1
