Added flutter tests to pre-commit hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,3 +6,16 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+    -   id: double-quote-string-fixer
+- repo: https://github.com/Cretezy/flutter-format-pre-commit
+  rev: 4a1df675bb74dea371c17934933e257e46f8dd98
+  hooks:
+    - id: flutter-format
+- repo: https://github.com/dluksza/flutter-analyze-pre-commit
+  rev: 0bfdb7415bb2d02794a884bf2b763a92772001eb
+  hooks:
+    - id: flutter-analyze
+- repo: https://github.com/dluksza/flutter-test-pre-commit
+  rev: ed4387d1e32d655e8f5cf58b410c9b4768f2950f
+  hooks:
+    - id: flutter-test
