--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,18 +31,18 @@ dependencies:
     sdk: flutter
   http: ^0.13.5
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.20.0
-  firebase_auth: ^3.6.2
-  cloud_firestore: ^3.4.4
-  firebase_storage: ^10.0.0
-  firebase_messaging: ^13.0.0
+  firebase_core: ^2.13.0
+  firebase_auth: ^4.6.1
+  cloud_firestore: ^4.7.1
+  firebase_storage: ^11.2.1
+  # firebase_messaging: ^14.6.1
   url_launcher: ^6.1.5
   image_picker: ^0.8.5+3
   intl: ^0.17.0
   provider: ^6.0.3
   flutter_linkify: ^5.0.2
   timeago: ^3.3.0
-  fake_cloud_firestore: ^1.3.1
+  fake_cloud_firestore: ^2.4.1+1
 
 dev_dependencies:
   test: ^1.21.1
