--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,6 +75,7 @@ android {
             signingConfig signingConfigs.release
         }
     }
+    namespace 'com.Jawwaad.OurCommunity'
 }
 
 flutter {
