--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,13 @@ dependencies:
   firebase_messaging: ^14.6.2
   url_launcher: ^6.1.5
   image_picker: ^0.8.5+3
-  intl: ^0.17.0
+  intl: ^0.18.0
   provider: ^6.0.3
   flutter_linkify: ^5.0.2
   timeago: ^3.3.0
   fake_cloud_firestore: ^2.4.1+1
+  table_calendar: ^3.0.9
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   test: ^1.21.1
