finished distance from business

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   table_calendar: ^3.0.9
   shared_preferences: ^2.2.0
   geolocator: ^9.0.2
+  geocoding: ^2.1.0
 
 dev_dependencies:
   test: ^1.21.1
